--- a/ips6.html
+++ b/ips6.html
@@ -1,28 +1,48 @@
-    <!DOCTYPE html>
-    <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
-        <link rel="stylesheet" href="ips6.css">
-    </head>
-    <body>    
-        <h3 class="login">login/signup</h3>
-        <p class="empty"></p>
-        <h1 class="heading" style="text-align: center;">Sneakers Store</h1>
-        
-            <img class="pic" id="pics" src="/air-jordan-1-low-g-golf-shoes-8bKbqs.png">
-            <h2 class="detail" style="font-weight: bold;">Air Jordan retro</h2>
-            <h4 class="detail2">Price: 15,380</h4>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="ips6.css">
+</head>
+<body>    
+    <div class="login"> login/signup </div>
+    <p class="empty"></p>
+    <h1 class="heading" style="text-align: center;">Sneakers Store</h1>
 
-    
+    <ul class="navul">
+        <li><img src="nikelogo.jpg" alt="" height="30px" style="overflow: hidden;"> </li>
+        <li class="nav1">Women</li>
+        <li class="nav1">Men</li>
+        <li class="nav1">New & Featured</li>
+        <li class="nav1">Kids</li>
+        <li class="nav1">Customize</li>
+        <li class="nav1">Sale</li>
+    </ul>
 
-        <ul>
-            <li class="white colors" id="white"> <img src="/air-jordan-1-low-g-golf-shoes-8bKbqs.png" alt="" height="130px" width="120px"> </li>
-            <li class="classic colors" id="classic"> <img src="/air-jordan-1-low-g-golf-shoes-8bKbqs (1).png" alt="" height="130px" width="120px"> </li>
-            <li class="grey colors" id="grey" > <img src="/air-jordan-1-low-g-golf-shoes-8bKbqs (1).jpeg" alt="" height="130px" width="120px"> </li>
-            <li class="black colors" id="black" > <img src="/air-jordan-1-low-g-golf-shoes-8bKbqs.jpeg" alt="" height="130px" width="120px"> </li>
-        </ul>
-    </body>
+    <img class="pic" id="pics" src="air-jordan-1-low-g-golf-shoes-8bKbqs.png">
+    <h2 class="detail" style="font-weight: bold;">Air Jordan retro</h2>
+    <h4 class="detail2">Price: 15,380</h4>
+
+    <ul>
+        <li class="white colors" id="white"> <img src="air-jordan-1-low-g-golf-shoes-8bKbqs.png" alt="" height="133px" width="120px"> </li>
+        <li class="classic colors" id="classic"> <img src="air-jordan-1-low-g-golf-shoes-8bKbqs (1).png" alt="" height="133px" width="120px"> </li>
+        <li class="grey colors" id="grey" > <img src="air-jordan-1-low-g-golf-shoes-8bKbqs (1).jpeg" alt="" height="133px" width="120px"> </li>
+        <li class="black colors" id="black" > <img src="air-jordan-1-low-g-golf-shoes-8bKbqs.jpeg" alt="" height="133px" width="120px"> </li>
+    </ul>
+
+    <footer>
+        <div class="footer-content">
+            <div class="footer-item">
+                Help
+            </div>
+            <div class="footer-item">
+                Contact Email
+            </div>
+        </div>
+    </footer>
+
     <script src="ips6.js"></script>
-    </html>
+</body>
+</html>
